# sendy

./: README.md  pyproject.toml
src/entities/: http_client.py
src/gateway/: http_client.py
