[tool.poetry]
name = "sendy"
version = "0.1.0"
description = "library to send notification messages to a configured url"
authors = ["softwarebloat"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.22.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
